Modeling out skeleton frame of each component in HTML, prepping for JSX

--- a/coralCrops/src/index.css
+++ b/coralCrops/src/index.css
@@ -13,6 +13,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.navbar {
+  align-items: center;
+}
+.navbar .links {
+  margin-left: auto;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
